[tool.poetry]
name = "dtol"
version = "0.1.0"
description = "Convert a date and/or time to seconds (or milliseconds) since the epoch."
authors = ["Larry Gouger <larry.gouger@coxautoinc.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dpath = "^2.0.5"
dateparser = "^1.1.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dtol = 'dtol:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
